# virtual_assistant

./: .gitignore  AGENTS.md
.opencode/plans/: backend_phase1_implementation.md
backend/: compose.yaml  config.yaml  main.py  pyproject.toml  test_ws.py
backend/chroma-data/: chroma.sqlite3
backend/rnd/faster-whisper/: pyproject.toml.backup  speech_to_ollama_tts.py  test_faster_whisper.py
backend/rnd/piper/: test_piper.py  test_piper_es.py  test_piper_sounddevice.py
backend/rnd/rag/: context.txt  rag_test_langchain.py
backend/tests/: conftest.py  test_behavior_controller.py  test_camera_service.py  test_llm_service.py  test_memory_service.py  test_protocol.py  test_rag_service.py
backend/tools/faster-whisper/: realtime_commands.py  speech_to_ollama.py
backend/tools/piper/: test_piper.py  test_piper_sounddevice.py
backend/tools/rag/: rag_minimal.py
backend/virtual_assistant_be/: timer.py
backend/virtual_assistant_be/api/: app.py
backend/virtual_assistant_be/api/routes/: health.py  rag.py  telegram.py  ws.py
backend/virtual_assistant_be/api/templates/: rag.html
backend/virtual_assistant_be/core/: behavior_controller.py  config.py  protocol.py
backend/virtual_assistant_be/services/: audio_service.py  camera_service.py  command_service.py  face_service.py  file_parser.py  llm_service.py  memory_service.py  rag_service.py  stt_service.py  telegram_service.py  tts_service.py
godot_client/: project.godot
godot_client/scenes/: lobby_scene.tscn
godot_client/scripts/: character.gd  character.gd.uid  lobby_scene.gd  (+3 more)
shared_protocol/: README.md
(+35 files in other folders)
