[project]
name = "virtual-assistant-backend"
version = "0.1.0"
description = "This is the backend server for the virtual assistant in godot, it communicates through websockets and gets context data through chromadb, with capabilities of LLM, STT and TTS"
readme = "README.md"
requires-python = ">=3.12.13"
dependencies = [
    "websockets",
    "fastapi",
    "uvicorn",
    "chromadb",
    "faster-whisper",
    "sounddevice",
    "numpy",
    "requests",
    "piper-tts",
    "opencv-python",
    "mediapipe",
    "PyMuPDF",
    "python-docx",
    "odfpy",
    "python-multipart",
    "pyyaml"
]
